# sunvox_cpp_juce_test

./: .gitignore  CMakeLists.txt  STATUS.md  claude.md  plan.md  research.md  sunvox_juce_v1.md  sunvox_juce_v2.md
.claude/: README.md  architecture.md  context.md  plan.md  state.md  workflows.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sunvox_lib/sunvox_lib/js/lib/: sunvox.js  sunvox.wasm
sunvox_lib/sunvox_lib/js/lib_lofi/: sunvox.wasm
sunvox_lib/sunvox_lib/macos/lib_arm64/: libsunvox.dylib  sunvox.dylib
sunvox_lib/sunvox_lib/macos/lib_x86_64/: sunvox.dylib
